syntax = "proto3";
package common;
option go_package = "github.com/RosettaFlow/Carrier-Go/lib/fighter/common";

message TaskReadyGoReq {
    string task_id     = 1;
    string contract_id = 2;
    string data_id     = 3;
    string party_id    = 4;          // 当前参与方id
    string env_id      = 5;
    message Peer {                // 各参与方信息
    string ip    = 1;
    int32  port  = 2;
    string party = 3;         // 达成共识后为每方分配的唯一标识
    string name  = 4;          // 为了可读性
    }
    repeated Peer   peers             = 6;
    string          contract_cfg      = 7;      // 算法配置json
    repeated string data_party        = 8;         // 各数据方的party_id
    repeated string computation_party = 9;  // 各计算方的party_id
    repeated string result_party      = 10;      // 各结果方的party_id
}

message TaskReadyGoReply {
    bool   ok  = 1;
    string msg = 2;
}
